[package]
name = "bitcoin_on_sol"
version = "0.1.0"
description = "Bitcoin on Sol - NFT mining simulation program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bitcoin_on_sol"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["metadata"] }
switchboard-on-demand = "0.3.4"
# Matches the solana 2.x `Clock` that `switchboard-on-demand`'s `get_value`
# expects (distinct from anchor's solana 1.18 `Clock`).
solana-clock = "2"
bytemuck = { version = "1.16", features = ["min_const_generics"] }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
